<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.example.apstudent.roboticsexplorer.TeamViewer">

    <TextView
        android:id="@+id/label_status"
        android:layout_width="302dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label_status"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_status">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_teamnumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_team_number" />

            <TextView
                android:id="@+id/label_team_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_teamnumber"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_rank" />

            <TextView
                android:id="@+id/label_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nodata_number"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_qual_wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qual_wins" />

            <TextView
                android:id="@+id/label_qual_wins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nodata_number"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_qual_losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qual_losses" />

            <TextView
                android:id="@+id/label_qual_losses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nodata_number"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_qual_ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_qual_ties" />

            <TextView
                android:id="@+id/label_qual_ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nodata_number"
                android:textAlignment="viewEnd" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/const_dq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_dq" />

            <TextView
                android:id="@+id/label_dq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/label_nodata_number"
                android:textAlignment="viewEnd" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/button_viewontba"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="viewOnTBA"
        android:text="@string/label_view_on_tba"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>