<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.example.apstudent.roboticsexplorer.MainActivity">

    <!-- TODO don't hardcode width and height -->
    <Spinner
        android:id="@+id/yearSpinner"
        android:layout_width="233dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:nextFocusDown="@id/districtSpinner"
        android:spinnerMode="dialog"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/districtSpinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/yearSpinner"
        app:layout_constraintTop_toBottomOf="@+id/yearSpinner" />

    <Spinner
        android:id="@+id/eventSpinner"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/districtSpinner"
        app:layout_constraintTop_toBottomOf="@+id/districtSpinner" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/label_year"
        app:layout_constraintEnd_toStartOf="@+id/yearSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/yearSpinner" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/label_district"
        app:layout_constraintEnd_toStartOf="@+id/districtSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/districtSpinner" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="72dp"
        android:text="@string/label_event"
        app:layout_constraintEnd_toStartOf="@+id/eventSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/eventSpinner" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="submit"
        android:text="@string/label_submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>