<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/team_ranking"
                android:layout_width="60dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:text="@string/label_nodata_number"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.538" />

            <TextView
                android:id="@+id/team_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/label_teamnumber"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/team_ranking"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:text="@string/label_teamname"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/tableLayout2"
                app:layout_constraintStart_toEndOf="@+id/team_ranking"
                app:layout_constraintTop_toBottomOf="@+id/team_number"
                app:layout_constraintVertical_bias="0.0" />

            <TableLayout
                android:id="@+id/tableLayout2"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <TextView
                        android:id="@+id/const_win"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_wins" />

                    <TextView
                        android:id="@+id/label_wins"
                        android:layout_width="23dp"
                        android:layout_height="wrap_content"
                        android:text="@string/label_nodata_number"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/const_loss"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_losses"
                        tools:layout_conversion_absoluteHeight="19dp"
                        tools:layout_conversion_absoluteWidth="58dp"
                        tools:layout_editor_absoluteX="311dp"
                        tools:layout_editor_absoluteY="24dp" />

                    <TextView
                        android:id="@+id/label_losses"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_nodata_number"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/const_tie"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_ties" />

                    <TextView
                        android:id="@+id/label_ties"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_nodata_number"
                        android:textAlignment="center" />
                </TableRow>

            </TableLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>